# shuffle

./: .gitignore  README.md  package.json
.claude/skills/arcium/: SKILL.md
contract/: Anchor.toml  Arcium.toml  check_comp_def.ts  generate_offchain_snippet.sh  offchain_circuits_snippet.rs  package.json  upload_circuits.sh
contract/encrypted-ixs/: Cargo.toml
contract/encrypted-ixs/src/: lib.rs
contract/programs/shuffle_protocol/: Cargo.toml
contract/programs/shuffle_protocol/src/: constants.rs  errors.rs  lib.rs
contract/programs/shuffle_protocol/src/instructions/: add_liquidity.rs  create_user_account.rs  execute_batch.rs  execute_swaps.rs  faucet.rs  init_batch_accumulator.rs  initialize.rs  mod.rs  place_order.rs  remove_liquidity.rs  settle_order.rs  test_swap.rs
contract/programs/shuffle_protocol/src/state/: batch.rs  mod.rs  pool.rs  user.rs
contract/scripts/: apply-circuit-urls.js  check-circuit-cid-consistency.sh  check-circuit-gateways.sh  create_token_mints.sh  deploy_devnet.sh  init-devnet.js  init_devnet_comp_defs.ts  init_pool_and_batch.ts  reinit_comp_defs.ts  sync-version.sh  upload-circuits-to-pinata.sh
contract/tests/: 0_sdk_setup.ts  3_full_flow.ts
docs/: JUPITER-CPI-ALTERNATIVES.md  TECHNICAL_OVERVIEW.md  UPGRADE_RUNBOOK.md
frontend/: next.config.js  package.json
frontend/src/app/: layout.tsx  (+1 more)
scripts/: check-env.js  clean.js  install-all.js  setup-local.js
sdk/: README.md  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  encryption.ts  errors.ts  index.ts  pda.ts  types.ts
sdk/tests/: sdk_integration.ts
(+24 files in other folders)
